--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div id="header_wrap">
         <div class="header">
             <!-- 스토리 엔터테인먼트 로고 -->
-            <a href="#"><img src="./img/logo_basic.png" alt="로고"></a>
+            <a href="#" class="logo_main"><img src="./img/logo_basic.png" alt="로고"></a>
             <ul class="gnb">
                 <li><a href="#section_3_wrap">회사소개</a></li>
                 <li><a href="#section_5_wrap">지원혜택</a></li>
